@@ -52,42 +52,36 @@ do							\
 
 #else
 /* Use templates if Cplusplus... */
-#define XMALLOC(new_mem, size)									\
-do												\
-  {												\
-    (at_address&)(new_mem) = (at_address) malloc (size);						\
-												\
-    if ((at_address&)(new_mem) == NULL)								\
-      FATAL3 ("malloc: request for %u bytes failed in %s line %d",				\
-              (size), __FILE__, (unsigned) __LINE__);						\
+#define XMALLOC(new_mem, size)					\
+do								\
+  {								\
+    (at_address&)(new_mem) = (at_address) malloc (size);	\
+     assert(new_mem);						\
   } while (0) 
 
  
-#define XCALLOC(new_mem, sizex)									\
-do												\
-  {												\
-    (at_address&)(new_mem) = (void *) calloc (sizex, 1);						\
-												\
+#define XCALLOC(new_mem, sizex)					\
+do								\
+  {								\
+    (at_address&)(new_mem) = (void *) calloc (sizex, 1);	\
+    assert(new_mem);						\
   } while (0) 
  
- 
-#define XREALLOC(old_ptr, size)									\
-do 												\
-  {												\
-    at_address new_mem;										\
-												\
-    if (old_ptr == NULL)									\
-      XMALLOC (new_mem, (size));								\
-    else											\
-      {												\
-        (at_address&) new_mem = (at_address) realloc ((old_ptr), (size));				\
-        if (new_mem == NULL)									\
-          FATAL4 ("realloc: request for %lx to be %u bytes failed in %s line %d",		\
-                  (unsigned long) (old_ptr), (size), __FILE__, (unsigned) __LINE__);		\
-      }												\
-												\
-    (at_address&)old_ptr = new_mem;								\
-  } while (0) 
+#define XREALLOC(old_ptr, size)							\
+do										\
+  {										\
+    at_address new_mem;								\
+										\
+    if (old_ptr == NULL)							\
+      XMALLOC (new_mem, (size));						\
+    else									\
+      {										\
+        (at_address&) new_mem = (at_address) realloc ((old_ptr), (size));	\
+        assert(new_mem);							\
+      }										\
+										\
+    (at_address&)old_ptr = new_mem;						\
+  } while (0) 									\
 #endif
 
 /*
